# exile-ai-test-platform-server

./: .env.development  .env.example  .env.production  .env.staging  .env.test  .gitignore  LICENSE  README.md  TODO.md  local_run.py  pyproject.toml
alembic/: env.py
alembic/versions/: af8bcd3faa4b_add_api_request_fields.py  c82e88547471_init_schema.py  d0e5e02f03c1_add_extract_rule_and_run_variables.py
app/: main.py
app/api/v1/: router.py
app/api/v1/routers/: admin.py  admin_login.py  api_request.py  scenario.py
app/core/: config.py  lifespan.py  pagination.py  security.py
app/db/: redis_client.py  session.py
app/models/: __init__.py  admin.py  api_request.py  aps_task.py  base.py
app/schemas/: api_request.py  scenario.py
app/services/: api_request_executor.py  scenario_run_queue.py  scenario_runner.py  scenario_task_dispatcher.py  variable_extractor.py
app/tasks/: celery_app.py  scenario_tasks.py  scheduler.py
tests/: __init__.py  conftest.py  test_api_request_router.py  test_api_request_router_real.py  test_assertion_evaluator.py  test_test_scenario_router.py  test_test_scenario_router_real.py
